# jpreprocess

./: .editorconfig  .gitignore  .gitmodules  COPYING  Cargo.toml  LICENSE  NOTICE  README.md  renovate.json
.cargo/: config.toml
bindings/pyo3/: Cargo.toml  pyproject.toml
bindings/pyo3/src/: lib.rs  njd.rs  structs.rs
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/jpreprocess/: __init__.py  dictionary.py  jpreprocess.pyi
bindings/python/pytests/: test_simple.py
bindings/python/src/: binding.rs  dictionary.rs  lib.rs  structs.rs
crates/jpreprocess/: Cargo.toml  README.md
crates/jpreprocess-core/: Cargo.toml  README.md
crates/jpreprocess-core/src/: accent_rule.rs  cform.rs  ctype.rs  error.rs  lib.rs  node_details.rs  token.rs  unk.rs  varint.rs  word_details.rs  word_entry.rs  word_line.rs
crates/jpreprocess-core/src/ctype/: five.rs  four.rs  ka_irregular.rs  keiyoushi.rs  lower_two.rs  mod.rs  old.rs  one.rs  sa_irregular.rs  special.rs  upper_two.rs
crates/jpreprocess-core/src/jpcommon/: mod.rs
crates/jpreprocess-core/src/jpcommon/label/: accent_phrase.rs
crates/jpreprocess-core/src/jpcommon/word_attr/: pos.rs
crates/jpreprocess-core/src/pos/: doushi.rs  fukushi.rs  joshi.rs  keiyoushi.rs  kigou.rs  meishi.rs  mod.rs  settoushi.rs  simple.rs
crates/jpreprocess-core/src/pronounciation/: mora_dict.rs  mora_enum.rs  phoneme.rs
crates/jpreprocess-core/src/pronunciation/: mod.rs  mora.rs  mora_dict.rs  mora_enum.rs  phoneme.rs
crates/jpreprocess-dictionary/: Cargo.toml  NOTICE.txt  README.md  test.csv
crates/jpreprocess-dictionary-builder/: Cargo.toml  NOTICE.txt  README.md
crates/jpreprocess-dictionary-builder/src/: build_dict.rs  ipadic_builder.rs  lib.rs  main.rs  serializer.rs
crates/jpreprocess-dictionary-builder/src/inverse/: da.rs  mod.rs
crates/jpreprocess-dictionary-builder/src/to_csv/: da.rs  mod.rs
crates/jpreprocess-dictionary/src/: default.rs  dictionary.rs  fetcher.rs  jpreprocess.rs  jpreprocess_dictionary.rs  lib.rs  lindera.rs  lookup.rs  metadata.rs  query.rs  store.rs  tokenizer.rs  word_data.rs
crates/jpreprocess-dictionary/src/builder/: build_dict.rs
crates/jpreprocess-dictionary/src/builder/to_csv/: da.rs  mod.rs
crates/jpreprocess-dictionary/src/core_compat/: mod.rs  v0_7_0.rs
crates/jpreprocess-dictionary/src/dictionary/: codec.rs  mod.rs  word_encoder.rs  word_encoding.rs
crates/jpreprocess-dictionary/src/dictionary/to_csv/: da.rs  mod.rs
crates/jpreprocess-dictionary/src/dictionary/to_dict/: build_dict.rs  ipadic_builder.rs  mod.rs  prefix_dictionary.rs  writer.rs
crates/jpreprocess-dictionary/src/serializer/: jpreprocess.rs  lindera.rs  mod.rs
crates/jpreprocess-dictionary/src/serializer/jpreprocess/: current.rs  legacy_0_5_1.rs  legacy_0_7_0.rs  mod.rs
crates/jpreprocess-dictionary/src/tokenizer/: default.rs  identify_dictionary.rs  jpreprocess.rs  mod.rs
crates/jpreprocess-jpcommon/: Cargo.toml  README.md
crates/jpreprocess-jpcommon/src/: create_features.rs  lib.rs
crates/jpreprocess-jpcommon/src/feature/: builder.rs  limit.rs  mod.rs
crates/jpreprocess-jpcommon/src/label/: accent_phrase.rs  breath_group.rs  utterance.rs  word.rs
crates/jpreprocess-jpcommon/src/word_attr/: cform.rs  ctype.rs  mod.rs  pos.rs
crates/jpreprocess-naist-jdic/: .gitignore  Cargo.toml  NOTICE.txt  README.md  build.json  build.rs  metadata.json
crates/jpreprocess-naist-jdic/mecab-naist-jdic/: char.def
crates/jpreprocess-naist-jdic/src/: jpreprocess.rs  lib.rs  lindera.rs
crates/jpreprocess-njd/: Cargo.toml  README.md
crates/jpreprocess-njd/src/: lib.rs  node.rs
crates/jpreprocess-njd/src/additional/: currency.rs
crates/jpreprocess-njd/src/contrib/: currency.rs  mod.rs
crates/jpreprocess-njd/src/njd_set/: mod.rs
crates/jpreprocess-njd/src/njd_set/accent_phrase/: mod.rs
crates/jpreprocess-njd/src/njd_set/accent_type/: mod.rs
crates/jpreprocess-njd/src/njd_set/digit/: lut1.rs  lut3.rs  mod.rs  rule.rs  standard.rs
crates/jpreprocess-njd/src/njd_set/long_vowel/: mod.rs
crates/jpreprocess-njd/src/njd_set/pronounciation/: mod.rs
crates/jpreprocess-njd/src/njd_set/pronunciation/: mod.rs
crates/jpreprocess-njd/src/njd_set/unvoiced_vowel/: mod.rs
crates/jpreprocess-njd/src/open_jtalk/: accent_phrase.rs  accent_type.rs  mod.rs  pronunciation.rs  unvoiced_vowel.rs
crates/jpreprocess-window/: Cargo.toml  README.md
crates/jpreprocess-window/src/: lib.rs
crates/jpreprocess/src/: dictionary.rs  lib.rs  main.rs  normalize_text.rs  test.rs
crates/jpreprocess/src/dictionary/: kind.rs  mod.rs
crates/jpreprocess/src/njd_set/: mod.rs
crates/jpreprocess/src/text_normalizer/: mod.rs
crates/jpreprocess/src/window/: data.rs
crates/jpreprocess/tests/: open_jtalk.rs  user_dictionary.rs
crates/jpreprocess/tests/min-dict/: dict.wordsidx
crates/lindera-ipadic-builder/: Cargo.toml
crates/lindera-ipadic-builder/src/: ipadic_builder.rs
examples/example-lru/: Cargo.toml  README.md
examples/example-lru/src/: lru_fetcher.rs  main.rs  storage_fetcher.rs
examples/example-vibrato/: Cargo.toml  README.md
examples/example-vibrato/src/: main.rs
examples/example-wasm/: Cargo.toml  README.md
examples/example-wasm/js/: min-dict  package.json  pnpm-lock.yaml  tsconfig.json
examples/example-wasm/js/patches/: example-wasm-esm.patch
examples/example-wasm/js/src/: index.ts  test.ts
examples/example-wasm/src/: lib.rs
jpreprocess-dictionary/: Cargo.toml
jpreprocess-dictionary/src/: dictionary.rs  jpreprocess_dictionary.rs  lib.rs  lindera.rs  lindera_dictionary.rs  main.rs  njd.rs
jpreprocess-njd/: Cargo.toml
jpreprocess-njd/src/: accent_rule.rs  dictionary.rs  lib.rs  node.rs  node_details.rs  pos.rs  unk.rs
tests/: Cargo.toml  README.md
tests/benches/: core.rs
tests/data/: .gitignore
tests/data/min-dict/: dict.da  dict.vals  dict.words  dict.wordsidx  matrix.mtx  metadata.json  min-dict.csv
tests/src/: lib.rs  open_jtalk.rs  unknown_word.rs  unvoiced_vowel.rs  user_dictionary.rs
tests/tests/: codec.rs  open_jtalk.rs  user_dictionary.rs
(+137 files in other folders)
