[workspace]
resolver = "2"
members = [
  "bindings/*",
  "crates/*",
  "examples/*",
  "tests",
]

[workspace.package]
version = "0.10.0"
description = "Japanese text preprocessor for Text-to-Speech application (OpenJTalk rewrite in rust language)."
license = "BSD-3-Clause"
repository = "https://github.com/jpreprocess/jpreprocess"
keywords = ["tts", "openjtalk", "library"]
categories = ["text-processing"]

rust-version = "1.74.1"

[workspace.dependencies]
jpreprocess = { path = "crates/jpreprocess", version = "0.10.0" }

jpreprocess-core = { path = "crates/jpreprocess-core", version = "0.10.0" }
jpreprocess-dictionary = { path = "crates/jpreprocess-dictionary", version = "0.10.0" }
jpreprocess-dictionary-builder = { path = "crates/jpreprocess-dictionary-builder", version = "0.10.0" }
jpreprocess-jpcommon = { path = "crates/jpreprocess-jpcommon", version = "0.10.0" }
jpreprocess-naist-jdic = { path = "crates/jpreprocess-naist-jdic", version = "0.10.0" }
jpreprocess-njd = { path = "crates/jpreprocess-njd", version = "0.10.0" }
jpreprocess-window = { path = "crates/jpreprocess-window", version = "0.10.0" }

lindera = "0.36"
lindera-dictionary = "0.36"

jlabel = "0.1.4"

clap = "4.5.4"

anyhow = "1.0.82"
bincode = "1.3.3"
byteorder = "1.5.0"
csv = "1.3.0"
encoding = "0.2.33"
flate2 = "1.0.29"
glob = "0.3.1"
log = "0.4.21"
once_cell = "1.19.0"
tar = "0.4.40"
thiserror = "1.0.59"
ureq = { version = "2.9.7", default-features = false }
yada = "0.5.1"
rayon = "1.10"

serde = "1.0.200"

aho-corasick = "1.1"
regex = "1.10.4"
phf = "0.11"
