[package]
name = "jpreprocess-dictionary"
version = "0.1.0"
edition = "2021"

license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
once_cell = "1.12.0"

lindera-core = { version = "0.21.0" }
lindera-decompress = { version = "0.21.0", optional = true }
lindera-ipadic-builder = { version = "0.21.0" }
serde = { version = "1.0.152" }

jpreprocess-core = { version = "0.1.0", path="../jpreprocess-core" }