[package]
name = "jpreprocess-njd"
version = "0.1.0"
edition = "2021"

license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
lindera = { version = "0.21" }
aho-corasick = "0.7"