[package]
name = "tests"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
naist-jdic = ["jpreprocess/naist-jdic"]

[dependencies]
jpreprocess.workspace = true
jpreprocess-core.workspace = true
jpreprocess-dictionary.workspace = true
jpreprocess-njd.workspace = true
jpreprocess-jpcommon.workspace = true

lindera-tokenizer.workspace = true
