[package]
name = "jpreprocess-pyo3"
edition = "2021"
version = "0.1.0"

description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
name = "jpreprocess"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
pythonize = "0.20.0"
serde = "1.0"

jpreprocess.workspace = true
jpreprocess-core.workspace = true
jpreprocess-njd.workspace = true
jpreprocess-jpcommon.workspace = true
