[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "jpreprocess"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "importlib_resources; python_version<'3.9'"
]

[project.optional-dependencies]
progress = [ "tqdm" ]
dev = [ "pytest>=8.0.1" ]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
