[package]
name = "jpreprocess-core"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

documentation = "https://docs.rs/jpreprocess-core"

[dependencies]
thiserror = "1.0.51"
anyhow = "1.0.75"

aho-corasick = "1.1"

lindera-core = { version = "0.27" }
lindera-tokenizer = { version = "0.27" }

serde = { version = "1.0.193", features = ["derive"] }
regex = "1.10.2"
once_cell = "1.19.0"
