[package]
name = "jpreprocess-core"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

documentation = "https://docs.rs/jpreprocess-core"

[dependencies]
thiserror.workspace = true
bincode.workspace = true

once_cell.workspace = true

lindera-core.workspace = true
lindera-tokenizer.workspace = true

serde = { workspace = true, features = ["derive"] }

regex.workspace = true
aho-corasick.workspace = true
