[package]
name = "jpreprocess-dictionary-builder"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

documentation = "https://docs.rs/jpreprocess-dictionary-builder"

[dependencies]
anyhow = "1.0.80"
bincode = "1.3.3"
byteorder = "1.5.0"
csv = "1.3.0"
glob = "0.3.1"
log = "0.4.20"
serde = "1.0.196"
yada = "0.5.0"
rayon = "1.8"

lindera-core = { version = "0.27.2" }

jpreprocess-core.workspace = true
jpreprocess-dictionary.workspace = true
