[package]
name = "jpreprocess-dictionary"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

documentation = "https://docs.rs/jpreprocess-dictionary"

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
anyhow = "1.0.79"
once_cell = "1.19.0"

lindera-core = { version = "0.27.2" }
lindera-ipadic-builder = { version = "0.27.2" }
lindera-tokenizer = { version = "0.27" }

serde = { version = "1.0.195" }

jpreprocess-core.workspace = true
