[package]
name = "jpreprocess-dictionary"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

documentation = "https://docs.rs/jpreprocess-dictionary"

[features]
binary = ["dep:clap"]

[[bin]]
name = "dict_tools"
required-features = ["binary"]

[dependencies]
bincode.workspace = true
byteorder.workspace = true
anyhow.workspace = true
once_cell.workspace = true

lindera.workspace = true
lindera-dictionary.workspace = true

serde.workspace = true

jpreprocess-core.workspace = true

clap = { workspace = true, features = ["derive"], optional = true }
