[package]
name = "jpreprocess-naist-jdic"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

documentation = "https://docs.rs/jpreprocess-naist-jdic"

[features]
default = []

naist-jdic = ["dep:tokio", "dep:reqwest", "dep:md5", "dep:flate2", "dep:tar"]
compress = ["lindera-dictionary/compress", "dep:bincode"]

[dependencies]
lindera-dictionary.workspace = true
bincode = { workspace = true, optional = true }

[build-dependencies]
jpreprocess-dictionary.workspace = true

tokio = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
md5 = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
