[package]
name = "jpreprocess-njd"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

documentation = "https://docs.rs/jpreprocess-njd"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
lindera-tokenizer = { version = "0.25" }
aho-corasick = "1.0"
once_cell = "1.18.0"

jpreprocess-core = { version = "0.2.0", path="../jpreprocess-core" }
jpreprocess-window = { version = "0.2.0", path="../jpreprocess-window" }
jpreprocess-dictionary = { version = "0.2.0", path="../jpreprocess-dictionary" }
