[package]
name = "jpreprocess-njd"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

documentation = "https://docs.rs/jpreprocess-njd"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
lindera-tokenizer = { version = "0.27" }
aho-corasick = "1.1"

jpreprocess-core.workspace = true
jpreprocess-window.workspace = true
jpreprocess-dictionary.workspace = true
