[package]
name = "jpreprocess-window"
version = "0.1.1"
edition = "2021"

description = "Japanese text preprocessor for Text-to-Speech application (OpenJTalk rewrite in rust language)."
license = "BSD-3-Clause"
repository = "https://github.com/jpreprocess/jpreprocess"
keywords = ["tts", "openjtalk", "library"]
categories = ["text-processing"]
documentation = "https://docs.rs/jpreprocess-window"
