[package]
name = "jpreprocess-window"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

documentation = "https://docs.rs/jpreprocess-window"
