[package]
name = "jpreprocess"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

documentation = "https://docs.rs/jpreprocess"

[features]
naist-jdic = ["jpreprocess-naist-jdic/naist-jdic"]
binary = ["clap"]

[[bin]]
name = "jpreprocess"
required-features = ["binary"]

[[bin]]
name = "dict_tools"
required-features = ["binary"]

[dependencies]
lindera-core = { version = "0.27" }
lindera-tokenizer = { version = "0.27" }
lindera-dictionary = { version = "0.27" }

phf = { version = "0.11", features = ["macros"] }
anyhow = "1.0.79"

jlabel.workspace = true
jpreprocess-core.workspace = true
jpreprocess-njd.workspace = true
jpreprocess-jpcommon.workspace = true
jpreprocess-dictionary.workspace = true
jpreprocess-dictionary-builder.workspace = true

jpreprocess-naist-jdic = { workspace = true, optional = true }

clap = { version = "4.4.18", features = ["derive"], optional = true }
