[package]
name = "jpreprocess"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

documentation = "https://docs.rs/jpreprocess"

[features]
naist-jdic = ["dep:jpreprocess-naist-jdic", "jpreprocess-naist-jdic/naist-jdic"]
binary = ["dep:clap", "dep:serde_json"]
tokenizer = [
  "dep:jpreprocess-dictionary",
  "dep:lindera",
  "dep:lindera-dictionary",
]
default = ["tokenizer"]

[[bin]]
name = "jpreprocess"
required-features = ["binary"]

[dependencies]
lindera = { workspace = true, optional = true }
lindera-dictionary = { workspace = true, optional = true }
jpreprocess-dictionary = { workspace = true, optional = true }

phf = { workspace = true, features = ["macros"] }

jlabel.workspace = true
jpreprocess-core.workspace = true
jpreprocess-njd.workspace = true
jpreprocess-jpcommon.workspace = true

jpreprocess-naist-jdic = { workspace = true, optional = true }

clap = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
