[package]
name = "lindera-ipadic-builder"
version = "0.23.0"
edition = "2021"
description = "A Japanese morphological dictionary builder for IPADIC."
documentation = "https://docs.rs/lindera-ipadic-builder"
homepage = "https://github.com/lindera-morphology/lindera"
repository = "https://github.com/lindera-morphology/lindera"
readme = "README.md"
keywords = ["japanese", "morphological", "dictionary", "builder", "ipadic"]
categories = ["text-processing"]
license = "MIT"

[features]
compress = ["lindera-compress"]

[dependencies]
anyhow = "1.0.68"
bincode = "1.3.3"
byteorder = "1.4.3"
csv = "1.1.6"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
env_logger = "0.10.0"
glob = "0.3.1"
log = "0.4.17"
serde = "1.0.152"
yada = "0.5.0"
rayon = "1.7"
itertools = "0.10.5"

lindera-compress = { version = "0.23.0", optional = true }
lindera-core = { version = "0.23.0" }
lindera-decompress = { version = "0.23.0" }

pprof = { version = "0.11", features = ["flamegraph"] }
