[package]
name = "example-vibrato"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
jpreprocess = { workspace = true, default-features = false }
jpreprocess-core = { workspace = true, features = ["vibrato"] }

vibrato.workspace = true
