[package]
name = "example-wasm"
edition = "2021"

version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
jpreprocess.workspace = true

lindera.workspace = true
lindera-dictionary.workspace = true
bincode.workspace = true

wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
